crates/squealy/tests/compile_fail/named_window_rejected_in_view_body.stderr
error[E0277]: the trait bound `ModelBackend: SupportsNamedWindow` is not satisfied
  --> tests/compile_fail/named_window_rejected_in_view_body.rs:17:14
   |
17 |             .window(|(post,)| Window::new().partition_by(post.user_id));
   |              ^^^^^^ the trait `SupportsNamedWindow` is not implemented for `ModelBackend`
   |
note: required by a bound in `window`
  --> $WORKSPACE/crates/squealy-core/src/query.rs
   |
   |     fn window<Parts, Ords, Frame>(
   |        ------ required by a bound in this associated function
...
   |         Conn::Backend: crate::SupportsNamedWindow,
   |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `SourceQuery::window`
